plugins {
	java
	idea
	alias(libs.plugins.spring.boot)
	alias(libs.plugins.dependency.management)
	id("org.sonarqube") version "7.2.2.6593"
}

group = "dev.sh1on"
version = "0.0.1-SNAPSHOT"
description = "Backend for AmlethMP application"

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(17))
	}
}

sonar {
	properties {
		property("sonar.projectKey", "AmlethMP")
		property("sonar.projectName", "AmlethMP")
	}
}

configurations {
	all {
		// Tự động cache module và phiên bản mới nhất (áp dụng cho thư viện được lấy từ mavenLocal())
		resolutionStrategy.cacheChangingModulesFor(0, TimeUnit.SECONDS)
		resolutionStrategy.cacheDynamicVersionsFor(0, TimeUnit.SECONDS)
	}

	compileOnly {
		extendsFrom(configurations.annotationProcessor.get())
	}
}

idea {
	module {
		isDownloadJavadoc = false
		isDownloadSources = true
	}
}

extra["sentryVersion"] = "8.27.0"
extra["springCloudAzureVersion"] = "6.4.0"

dependencies {
	implementation(libs.spring.boot.starter.actuator)
	implementation(libs.spring.boot.starter.aop)
	implementation(libs.spring.boot.starter.webflux)
	implementation(libs.liquibase.core)
	implementation(libs.spring.boot.starter.mail)
	implementation(libs.spring.boot.starter.validation)
	implementation(libs.spring.boot.starter.security)
	implementation(libs.spring.boot.starter.security.oauth2.resource.server)
	implementation(libs.spring.boot.starter.data.r2dbc)
	implementation(libs.spring.boot.starter.data.redis)
	implementation(libs.spring.jdbc)
	implementation(libs.kafka.streams)
	implementation(libs.spring.kafka)
	implementation(libs.spring.cloud.azure.starter)
	implementation(libs.spring.cloud.azure.starter.storage)
	implementation(libs.sentry.spring.boot.starter)
	implementation(libs.springdoc.openapi.webflux.ui)
	implementation(libs.hikari.cp)
	implementation(libs.mapstruct)
	implementation(libs.mapstruct.spring.annotations)
	implementation(libs.therapi.runtime.javadoc)
	implementation(libs.bundles.jjwt)
	implementation(libs.spring.dotenv)
	implementation(libs.resilience4j.spring.boot3)
	implementation(libs.myrlennia237.webflux)
	implementation(libs.querydsl.r2dbc)

	annotationProcessor(libs.mapstruct.processor)
	annotationProcessor(libs.therapi.runtime.javadoc.scribe)
	annotationProcessor(libs.lombok)
	annotationProcessor(libs.lombok.mapstruct.binding)
	annotationProcessor(libs.mapstruct.spring.extensions)
	annotationProcessor(libs.spring.boot.configuration.processor)

	runtimeOnly(libs.postgresql)
	runtimeOnly(libs.r2dbc.postgresql)

	compileOnly(libs.lombok)
	compileOnly(libs.jetbrains.annotations)

	developmentOnly(libs.spring.boot.devtools)
	developmentOnly(libs.spring.boot.docker.compose)

	testImplementation(libs.spring.boot.starter.test)
	testRuntimeOnly(libs.junit.platform.launcher)
	testAnnotationProcessor(libs.mapstruct.processor)
}

dependencyManagement {
	imports {
		mavenBom("io.sentry:sentry-bom:${property("sentryVersion")}")
		mavenBom("com.azure.spring:spring-cloud-azure-dependencies:${property("springCloudAzureVersion")}")
	}
}

tasks {
	withType<Test> {
		useJUnitPlatform()
	}

	withType<JavaCompile> {
		options.compilerArgs.addAll(mapstructCompilerArgs())
	}

	bootBuildImage {
		runImage.set("paketobuildpacks/ubuntu-noble-run:latest")
	}
}

/**
 * Tạo danh sách tham số trình biên dịch cho MapStruct.
 */
fun mapstructCompilerArgs(): List<String> {
	val args = mutableListOf(
		"-Amapstruct.defaultComponentModel=spring",
		"-Amapstruct.defaultInjectionStrategy=constructor",
		"-parameters"
	)

	if (project.hasProperty("dev")) {
		args.addAll(listOf(
			"-Amapstruct.suppressGeneratorTimestamp=true",
			"-Amapstruct.suppressGeneratorVersionInfoComment=true",
			"-Amapstruct.verbose=true"
		))
	}

	return args
}
